--- a/index.html
+++ b/index.html
@@ -19,87 +19,85 @@
   </head>
   <body>
     <section class="questions">
-
       <!-- Title -->
       <div class="title">
-        <h2>FAQ Questions</h2> 
+        <h2>FAQ Questions</h2>
       </div>
 
       <!-- Questions -->
       <div class="section-center">
-        
         <!-- Single question -->
         <article class="question">
           <div class="question-title">
-          <p>Do You Accept All Major Credit Cards?</p>
-          <button type="button" class="question-btn">
-            <span class="plus-icon">
-              <i class="far fa-plus-square"></i>
-            </span>
-            <span class="minus-icon">
-              <i class="far fa-minus-square"></i>
-            </span>
-          </button>
-        </div>
-        <!-- Question text -->
-        <div class="question-text">
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-            Ac placerat vestibulum lectus mauris. Ultrices dui sapien eget mi proin sed libero. 
-            Blandit libero volutpat sed cras.
-          </p>
-        </div>
+            <p>Do You Accept All Major Credit Cards?</p>
+            <button type="button" class="question-btn">
+              <span class="plus-icon">
+                <i class="far fa-plus-square"></i>
+              </span>
+              <span class="minus-icon">
+                <i class="far fa-minus-square"></i>
+              </span>
+            </button>
+          </div>
+          <!-- Question text -->
+          <div class="question-text">
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ac
+              placerat vestibulum lectus mauris. Ultrices dui sapien eget mi
+              proin sed libero. Blandit libero volutpat sed cras.
+            </p>
+          </div>
         </article>
         <!-- end of single question -->
 
-         <!-- Single question -->
-         <article class="question">
+        <!-- Single question -->
+        <article class="question">
           <div class="question-title">
-          <p>Do You Use Organic Ingredients?</p>
-          <button type="button" class="question-btn">
-            <span class="plus-icon">
-              <i class="far fa-plus-square"></i>
-            </span>
-            <span class="minus-icon">
-              <i class="far fa-minus-square"></i>
-            </span>
-          </button>
-        </div>
-        <!-- Question text -->
-        <div class="question-text">
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-            Ac placerat vestibulum lectus mauris. Ultrices dui sapien eget mi proin sed libero. 
-            Blandit libero volutpat sed cras.
-          </p>
-        </div>
+            <p>Do You Use Organic Ingredients?</p>
+            <button type="button" class="question-btn">
+              <span class="plus-icon">
+                <i class="far fa-plus-square"></i>
+              </span>
+              <span class="minus-icon">
+                <i class="far fa-minus-square"></i>
+              </span>
+            </button>
+          </div>
+          <!-- Question text -->
+          <div class="question-text">
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ac
+              placerat vestibulum lectus mauris. Ultrices dui sapien eget mi
+              proin sed libero. Blandit libero volutpat sed cras.
+            </p>
+          </div>
         </article>
         <!-- end of single question -->
 
-         <!-- Single question -->
-         <article class="question">
+        <!-- Single question -->
+        <article class="question">
           <div class="question-title">
-          <p>Do You Support Local Farmers?</p>
-          <button type="button" class="question-btn">
-            <span class="plus-icon">
-              <i class="far fa-plus-square"></i>
-            </span>
-            <span class="minus-icon">
-              <i class="far fa-minus-square"></i>
-            </span>
-          </button>
-        </div>
-        <!-- Question text -->
-        <div class="question-text">
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-            Ac placerat vestibulum lectus mauris. Ultrices dui sapien eget mi proin sed libero. 
-            Blandit libero volutpat sed cras.
-          </p>
-        </div>
+            <p>Do You Support Local Farmers?</p>
+            <button type="button" class="question-btn">
+              <span class="plus-icon">
+                <i class="far fa-plus-square"></i>
+              </span>
+              <span class="minus-icon">
+                <i class="far fa-minus-square"></i>
+              </span>
+            </button>
+          </div>
+          <!-- Question text -->
+          <div class="question-text">
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ac
+              placerat vestibulum lectus mauris. Ultrices dui sapien eget mi
+              proin sed libero. Blandit libero volutpat sed cras.
+            </p>
+          </div>
         </article>
         <!-- end of single question -->
       </div>
